--- a/Models.Global.Repositories/Models.Global.Repositories.csproj
+++ b/Models.Global.Repositories/Models.Global.Repositories.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\TOOLBOX\ToolBoxDB\ToolBoxDB.csproj" />
     <ProjectReference Include="..\Model.Interfaces\Model.Interfaces.csproj" />
     <ProjectReference Include="..\Models.Global.Entities\Models.Global.Entities.csproj" />
